--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -25,7 +25,7 @@ mariadb:
     name: hmmmm
     user: aarysIsLost
     password: strongPassword
-    host:
+    host: mariadb
     port: "3306"
     forcePassword: true
   replication:
