--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -4,8 +4,8 @@ metadata:
   name: "{{ .Release.Name }}-secret"
 type: Opaque
 stringData:
-  MYSQL_USER: {{ .Values.mariadb.db.user }}
-  MYSQL_PASS: {{ .Values.mariadb.db.password }}
-  MYSQL_HOST: {{ .Values.mariadb.db.host }}
-  MYSQL_PORT: {{ .Values.mariadb.db.port}}
-  MYSQL_DB: {{ .Values.mariadb.db.name }}
+  MYSQL_USER: "{{ .Values.mariadb.db.user }}"
+  MYSQL_PASS: "{{ .Values.mariadb.db.password }}"
+  MYSQL_HOST: "{{ .Values.mariadb.db.host }}"
+  MYSQL_PORT: "{{ .Values.mariadb.db.port}}"
+  MYSQL_DB: "{{ .Values.mariadb.db.name }}"
