--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -1,9 +1,9 @@
-apiVersion: v2
+apiVersion: v1
 kind: Secret
 metadata:
   name: "{{ .Release.Name }}-secret"
 type: Opaque
-stringData:
+data:
   MYSQL_USER: "{{ .Values.mariadb.db.user }}"
   MYSQL_PASS: "{{ .Values.mariadb.db.password }}"
   MYSQL_HOST: "{{ .Values.mariadb.db.host }}"
