--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/aaryswastaken/k8s-tinkering
+  repository: ghcr.io/aaryswastaken/k8s-tinkering:latest
   pullPolicy: IfNotPresent
 
 service:
