--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -8,11 +8,11 @@ service:
   type: ClusterIP
 
 ingress:
-  enables: false
+  enabled: false
   host: ""
 
 nodeSelector:
-  enable: false
+  enabled: false
   labelKey: ""
   labelValue: ""
 
